# simeonpashley.github.io

./: .clinerules  .coverage  .cursorignore  .cursorrules  .eslintrc.js  .gitignore  .htaccess  .pre-commit-config.yaml  .prettierrc  .remarkignore  .remarkrc.js  .textlintrc.json  .travis.yml  CNAME  Gemfile  Gruntfile.js  Makefile  README.md  Rakefile  _config.yml  about.md  atom.xml  bower.json  feed.xml  glp.sublime-workspace  index.html  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  privacy.md  pyproject.toml  resume.md  tsconfig.json  wordpress.xml
.husky/: pre-commit
_attachments/: 2010-06-09-badpixar_banner.html  2010-06-09-great-dane.html  2010-06-09-leveraging-social-media-banner.html  2010-06-09-leveraging-social-media-thumb.html  2010-06-09-leveraging-social-media.html  2010-06-09-minimum-viable-product-illustrated-methodologist1.html  2010-06-09-mvp-banner.html  2010-06-10-prepe3-banner.html  2010-06-10-presentation-2-banner.html  2010-06-11-graduate-banner.html  2010-06-11-img_4281.html  2010-06-11-logo_train2game.html  2010-06-11-outsourcing-banner-2.html  2010-06-11-screen-shot-2010-06-11-at-00-51-26.html  2010-06-11-tiga.html  2010-06-12-raven-antonyward-2.html  2010-06-14-sorry-no-internet-today-1.html  2010-06-14-wii-ps3-xbox360.html  2010-06-16-amazon-co-jp-heavy-rain-feedback-2.html  2010-06-16-amazon-co-jp-heavy-rain-feedback.html  2010-06-16-amazon-co-uk-heavy-rain-feedback-2.html  2010-06-16-amazon-co-uk-heavy-rain-feedback.html  2010-06-16-amazon-com-heavy-rain-feedback-2.html  2010-06-16-amazon-com-heavy-rain-feedback.html  (+211 more)
(+1218 files in other folders)
