[tool.poetry]
name = "simeonpashley.github.io"
version = "0.1.0"
description = "Personal website and blog"
authors = ["Simeon Pashley <simeon@pashley.org>"]
readme = "README.md"
packages = [{include = "simeonpashley", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.4"
mypy = "^1.9.0"
ruff = "^0.4.2"
pytest-cov = "^5.0.0"

[tool.poetry.dev-dependencies]
black = "^24.0.0"
isort = "^5.13.2"
pre-commit = "^3.6.0"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 88
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
]
ignore = ["E203"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
